--- a/Index Style.css
+++ b/Index Style.css
@@ -158,7 +158,8 @@ ul li a:hover{
     top: -20px;
     left: 870px;
     border-radius: 10px;
-    padding-top: 50px;
+    padding-top: 100px;
+    margin-top: 100px;
     padding: 25px;
 }
 
